--- a/js/problem_3/index.html
+++ b/js/problem_3/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>3. Longest Substring Without Repeating Characters
-    </h1>
+    <h1>3. Longest Substring Without Repeating Characters </h1>
     <script src="./main.js"></script>
 </body>
 </html>
