--- a/js/problem_2/index.html
+++ b/js/problem_2/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>2. Add Two Numbers
-    </h1>
+    <h1>2. Add Two Numbers </h1>
     <script src="./main.js"></script>
 </body>
 </html>
